cargo-features = ["edition2024"]
[package]
name = "cross-clip"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
tokio = { version = "1.39.2", default-features = false, features = ["full"] }
async-trait = "0.1.81"
futures = "0.3.30"
libp2p = { version = "0.54.0", features = [ "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = {  version = "0.4.22" ,features = ["max_level_trace","release_max_level_trace","std", "serde"]}
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
bytemuck = "1.17.0"
serde_json = "1.0.122"
chrono = "0.4.38"
